# CAM3Qt

./: .gitignore  CMakeLists.txt
resources/: resources.qrc
resources/styles/: fluent.qss  light.qss  table.qss
src/: MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  RibbonWidget.cpp  RibbonWidget.h  ThemeManager.cpp  ThemeManager.h  main.cpp
